--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "homepage": "https://github.com/inetstudio/instagram",
     "license": "MIT",
     "require": {
-        "inetstudio/upload-image": ">=1.0.0",
-        "inetstudio/upload-video": ">=1.0.0",
+        "inetstudio/upload-image": "^1.0.0",
+        "inetstudio/upload-video": "^1.0.0",
         "guzzlehttp/guzzle": "^6.2",
         "emojione/emojione": "^2.2"
     },
