--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "homepage": "https://github.com/inetstudio/instagram",
     "license": "MIT",
     "require": {
-        "guzzlehttp/guzzle": "^6.2",
-        "emojione/emojione": "^3.0.3",
-        "spatie/laravel-medialibrary": "^5.11.1"
+        "guzzlehttp/guzzle": "^6.3",
+        "emojione/emojione": "^3.1",
+        "spatie/laravel-medialibrary": "^6.1"
     },
     "authors": [
         {
@@ -18,5 +18,12 @@
       "psr-4": {
         "InetStudio\\Instagram\\": "src/"
       }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "InetStudio\\Instagram\\Providers\\InstagramServiceProvider"
+            ]
+        }
     }
 }
