--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "guzzlehttp/guzzle": "^6.3",
         "emojione/emojione": "^3.1",
+        "mgp25/instagram-php": "^4.1",
         "spatie/laravel-medialibrary": "^6.1"
     },
     "authors": [
