--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,11 @@
     "homepage": "https://github.com/inetstudio/instagram",
     "license": "MIT",
     "require": {
+        "php": ">=7.1.3",
+        "ext-json": "*",
         "guzzlehttp/guzzle": "^6.3",
-        "emojione/emojione": "^3.1",
-        "mgp25/instagram-php": "^4.1",
-        "spatie/laravel-medialibrary": "^6.1"
+        "emojione/emojione": "^4.0",
+        "mgp25/instagram-php": "dev-master"
     },
     "authors": [
         {
@@ -17,13 +18,23 @@
     ],
     "autoload": {
       "psr-4": {
-        "InetStudio\\Instagram\\": "src/"
+          "InetStudio\\Instagram\\": "package/src",
+          "InetStudio\\Instagram\\Comments\\": "entities/comments/src",
+          "InetStudio\\Instagram\\Posts\\": "entities/posts/src",
+          "InetStudio\\Instagram\\Users\\": "entities/users/src"
       }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "InetStudio\\Instagram\\Providers\\InstagramServiceProvider"
+                "InetStudio\\Instagram\\Providers\\InstagramBindingsServiceProvider",
+                "InetStudio\\Instagram\\Providers\\InstagramServiceProvider",
+                "InetStudio\\Instagram\\Comments\\Providers\\CommentsBindingsServiceProvider",
+                "InetStudio\\Instagram\\Comments\\Providers\\CommentsServiceProvider",
+                "InetStudio\\Instagram\\Posts\\Providers\\PostsBindingsServiceProvider",
+                "InetStudio\\Instagram\\Posts\\Providers\\PostsServiceProvider",
+                "InetStudio\\Instagram\\Users\\Providers\\UsersBindingsServiceProvider",
+                "InetStudio\\Instagram\\Users\\Providers\\UsersServiceProvider"
             ]
         }
     }
