--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "homepage": "https://github.com/inetstudio/instagram",
     "license": "MIT",
     "require": {
-        "php": ">=7.1.3",
+        "php": "^7.2",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.3",
         "emojione/emojione": "^4.5",
